# api-framework

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  compose.yml  pyproject.toml
.devcontainer/api-container/: devcontainer.json  docker-compose.yml
.github/workflows/: code-checks.yml  deploy.yml  run-tests-upload-file.yml
api_framework/: __init__.py  app.py  exceptions.py  logger_conf.py
api_framework/block/: models.py  sample_data.json
api_framework/common/: __init__.py  dependencies.py  exceptions.py  models.py  routers.py  schemas.py  services.py
api_framework/interfaces/: __init__.py
api_framework/migrations/: alembic.ini  alembic_runner.py  env.py
api_framework/migrations/versions/: aae47bdc13c9_initial_creation.py
api_framework/user/: __init__.py  exceptions.py  models.py  routers.py  schemas.py  services.py
testapi/: __init__.py  app.py  database.py  exceptions.py  gunicorn_config.py  logger_conf.py
testapi/common/: __init__.py  dependencies.py  exceptions.py  middleware.py  models.py  routers.py  schemas.py  service.py
testapi/interfaces/: __init__.py
testapi/migrations/: alembic.ini  alembic_runner.py  env.py
tests/: __init__.py  conftest.py
tests/common/: test_common_routers.py
tests/http-client/: api_routes.http  http-client.env.json
tests/interfaces/: test_airflow.py
tests/users/: test_routers.py  test_service.py
tests/workflows/: test_routers.py  test_service.py
