[project]
name = "api-framework"
version = "0.1.1"
description = "A Common API framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "case-converter==1.*",
    "alembic==1.*",
    "fastapi==0.*",
    "gunicorn==23.*",
    "psycopg2-binary==2.*",
    "pydantic-settings==2.*",
    "sqlmodel==0.*",
    "uvicorn-worker==0.*",
    "httpx==0.*",
    "jsonformatter==0.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies  = [
    "pytest==8.*",
    "toml==0.*",
    "pytest-cov==6.*",
    "testcontainers==4.*",
    "pytest-asyncio==0.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "api_framework/app.py",
    "api_framework/gunicorn_config.py",
    "api_framework/exceptions.py",
    "api_framework/common/middleware.py",
    "*/site-packages/*"
]
